--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "fitseedssearch"
 version = "0.1.0"
-description = "Add your description here"
+description = "FITSeedsSearch"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.124.0",
     "pandas>=2.3.3",
